# shard

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md
.github/: release.yml
include/: shard.h  version.h.in
include/shard/: colors.h  process.h
src/: command.c  command.h  common.h  lex.c  main.c  main.rs  process.c  process.h  shard.rs
src/builtin/: builtin.c  builtin.h
src/parser/: lex.c  lex.h
src/shard/: builtin.rs  command.rs
